Revert "Reorganize Fortran CMake settings"
This reverts commit b059d346a72e3e7e10a8a67b60c72100c190d8e3.

--- a/src/ConvertESOMTR/CMakeLists.txt
+++ b/src/ConvertESOMTR/CMakeLists.txt
@@ -10,16 +10,40 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/../../Products")
 
 set(SRC mainModule.f90)
 
-set(SKIP_BUILD_RPATH TRUE)
-set(CMAKE_SKIP_RPATH ${FORTRAN_SKIP_RPATH})
+set(STATIC_EXE FALSE)
 
+set(SKIP_BUILD_RPATH TRUE)
 add_executable(convertESOMTR ${SRC})
 set_target_properties(convertESOMTR PROPERTIES FOLDER Auxiliary)
-target_link_libraries(convertESOMTR PRIVATE fortran_project_options)
+add_library(convertESOMTROptions INTERFACE)
+
+if(APPLE)
+  if(CMAKE_Fortran_COMPILER MATCHES "ifort")
+    target_compile_options(convertESOMTROptions INTERFACE -static-intel)
+  endif()
+elseif(UNIX)
+  set(CMAKE_SKIP_RPATH TRUE)
+  if(CMAKE_Fortran_COMPILER MATCHES "ifort")
+    target_compile_options(convertESOMTROptions INTERFACE -static-intel)
+  else()
+    target_compile_options(convertESOMTROptions INTERFACE -static)
+    set(STATIC_EXE TRUE)
+  endif()
+else()
+  set(STATIC_EXE TRUE)
+  if(CMAKE_Fortran_COMPILER MATCHES "ifort")
+    # Set release flags to be empty
+    set(CMAKE_Fortran_FLAGS_RELEASE "")
+    target_compile_options(convertESOMTROptions INTERFACE /libs:static)
+  else()
+    target_compile_options(convertESOMTROptions INTERFACE -static)
+  endif()
+endif()
+target_link_libraries(convertESOMTR PRIVATE convertESOMTROptions)
 
 
 install(TARGETS convertESOMTR DESTINATION "PostProcess/convertESOMTRpgm/")
-if(NOT ${FORTRAN_STATIC_EXE})
+if(NOT ${STATIC_EXE})
   include("${CMAKE_CURRENT_SOURCE_DIR}/../../cmake/ProjectMacros.cmake")
   install_target_prereqs(convertESOMTR "PostProcess/convertESOMTRpgm/")
 endif()
