--- a/src/ExpandObjects/CMakeLists.txt
+++ b/src/ExpandObjects/CMakeLists.txt
@@ -14,20 +14,61 @@ endif()
 
 set(SRC epfilter.f90)
 
-set(SKIP_BUILD_RPATH TRUE)
-set(CMAKE_SKIP_RPATH ${FORTRAN_SKIP_RPATH})
+set(STATIC_EXE FALSE)
 
+add_library(ExpandObjectsOptions INTERFACE)
+
+if(APPLE)
+  if(CMAKE_Fortran_COMPILER MATCHES "ifort")
+    target_compile_options(ExpandObjectsOptions INTERFACE -fpp)
+    target_compile_options(ExpandObjectsOptions INTERFACE -static-intel)
+  else()
+    if(NOT "Ninja" STREQUAL ${CMAKE_GENERATOR})
+      target_compile_options(ExpandObjectsOptions INTERFACE -cpp)
+    endif()
+    target_compile_options(ExpandObjectsOptions INTERFACE -ffree-line-length-200)
+  endif()
+elseif(UNIX)
+  set(CMAKE_SKIP_RPATH TRUE)
+  if(CMAKE_Fortran_COMPILER MATCHES "ifort")
+    target_compile_options(ExpandObjectsOptions INTERFACE -fpp)
+    target_compile_options(ExpandObjectsOptions INTERFACE -static-intel)
+  else()
+    if(NOT "Ninja" STREQUAL ${CMAKE_GENERATOR})
+      target_compile_options(ExpandObjectsOptions INTERFACE -cpp)
+    endif()
+    target_compile_options(ExpandObjectsOptions INTERFACE -static)
+    target_compile_options(ExpandObjectsOptions INTERFACE -ffree-line-length-200)
+    set(STATIC_EXE TRUE)
+  endif()
+else() # Windows
+  set(STATIC_EXE TRUE)
+  if(CMAKE_Fortran_COMPILER MATCHES "ifort")
+    # Set release flags to be empty
+    set(CMAKE_Fortran_FLAGS_RELEASE "")
+    target_compile_options(ExpandObjectsOptions INTERFACE /libs:static)
+    target_compile_options(ExpandObjectsOptions INTERFACE /fpp)
+  else()
+    target_compile_options(ExpandObjectsOptions INTERFACE -static)
+    if(NOT "Ninja" STREQUAL ${CMAKE_GENERATOR})
+      target_compile_options(ExpandObjectsOptions INTERFACE -cpp)
+    endif()
+    target_compile_options(ExpandObjectsOptions INTERFACE -ffree-line-length-200)
+  endif()
+endif()
+
+set(SKIP_BUILD_RPATH TRUE)
 if(APPLE OR UNIX)
   add_executable(ExpandObjects ${SRC})
 else() # windows
   add_executable(ExpandObjects ${SRC} "${CMAKE_CURRENT_BINARY_DIR}/ExpandObjects.rc")
 endif()
 
-target_link_libraries(ExpandObjects PRIVATE fortran_project_options)
+target_link_libraries(ExpandObjects ExpandObjectsOptions)
 set_target_properties(ExpandObjects PROPERTIES FOLDER Auxiliary)
 
 install(TARGETS ExpandObjects DESTINATION "./")
-if(NOT ${FORTRAN_STATIC_EXE})
+if(NOT ${STATIC_EXE})
   include("${CMAKE_CURRENT_SOURCE_DIR}/../../cmake/ProjectMacros.cmake")
   install_target_prereqs(ExpandObjects "./")
 endif()
