--- a/src/Transition/CMakeLists.txt
+++ b/src/Transition/CMakeLists.txt
@@ -8,7 +8,7 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/../../Products")
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/../../Products")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/../../Products")
 
-set(CMAKE_SKIP_RPATH ${FORTRAN_SKIP_RPATH})
+set(STATIC_EXE FALSE)
 
 # first create a static library of shared stuff
 set(LIB_SRC
@@ -68,8 +68,51 @@ list(APPEND VERSIONS 9_4_0)
 list(APPEND VERSIONS 9_5_0)
 
 
-target_compile_options(TransitionLib PUBLIC -fbounds-check)
-target_link_libraries(TransitionLib PUBLIC fortran_project_options)
+add_library(TransitionOptions INTERFACE)
+
+if(APPLE)
+  if("${CMAKE_Fortran_COMPILER_ID}" MATCHES "GNU")
+    if(NOT "Ninja" STREQUAL ${CMAKE_GENERATOR})
+      target_compile_options(TransitionOptions INTERFACE -cpp)
+    endif()
+    target_compile_options(TransitionOptions INTERFACE -ffree-line-length-none)
+    target_compile_options(TransitionOptions INTERFACE -fbounds-check)
+  else()
+    target_compile_options(TransitionOptions INTERFACE -fpp)
+    target_compile_options(TransitionOptions INTERFACE -static-intel)
+  endif()
+elseif(UNIX)
+  set(CMAKE_SKIP_RPATH TRUE)
+  if("${CMAKE_Fortran_COMPILER_ID}" MATCHES "GNU")
+    target_compile_options(TransitionOptions INTERFACE -static)
+    if(NOT "Ninja" STREQUAL ${CMAKE_GENERATOR})
+      target_compile_options(TransitionOptions INTERFACE -cpp)
+    endif()
+    target_compile_options(TransitionOptions INTERFACE -ffree-line-length-none)
+    target_compile_options(TransitionOptions INTERFACE -fbounds-check)
+    set(STATIC_EXE TRUE)
+  else()
+    target_compile_options(TransitionOptions INTERFACE -fpp)
+    target_compile_options(TransitionOptions INTERFACE -static-intel)
+  endif()
+else() # Windows
+  set(STATIC_EXE TRUE)
+  if("${CMAKE_Fortran_COMPILER_ID}" MATCHES "GNU")
+    target_compile_options(TransitionOptions INTERFACE -static)
+    if(NOT "Ninja" STREQUAL ${CMAKE_GENERATOR})
+      target_compile_options(TransitionOptions INTERFACE -cpp)
+    endif()
+    target_compile_options(TransitionOptions INTERFACE -ffree-line-length-none)
+    target_compile_options(TransitionOptions INTERFACE -fbounds-check)
+  else()
+    # Set release flags to be empty
+    set(CMAKE_Fortran_FLAGS_RELEASE "")
+    target_compile_options(TransitionOptions INTERFACE /libs:static)
+    target_compile_options(TransitionOptions INTERFACE /fpp)
+  endif()
+endif()
+
+target_link_libraries(TransitionLib PRIVATE TransitionOptions)
 
 list(LENGTH VERSIONS VERSIONS_SIZE)
 
@@ -95,11 +138,11 @@ foreach(i RANGE 1 ${end})
   set(CMAKE_Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${LAST_NAME})
   add_executable("${LAST_NAME}" ${SRC})
   set_target_properties("${LAST_NAME}" PROPERTIES FOLDER Auxiliary)
-  target_link_libraries("${LAST_NAME}" PRIVATE TransitionLib)
+  target_link_libraries("${LAST_NAME}" PRIVATE TransitionLib TransitionOptions)
 
   if("${i}" GREATER "22")
     install(TARGETS "${LAST_NAME}" DESTINATION PreProcess/IDFVersionUpdater)
-    if(NOT ${FORTRAN_STATIC_EXE})
+    if(NOT ${STATIC_EXE})
       install_target_prereqs("${LAST_NAME}" PreProcess/IDFVersionUpdater)
     endif()
   endif()
