--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -250,13 +250,9 @@ ENDIF()
 ADD_SUBDIRECTORY(third_party/Windows-CalcEngine)
 set_target_properties(Windows-CalcEngine PROPERTIES FOLDER ThirdParty/Windows-CalcEngine)
 
-set(skip_tools ON)
-set(skip_tests ON)
-set(skip_api ON)
+set(SAM_SKIP_TOOLS ON)
+set(SAM_SKIP_TESTS ON)
 ADD_SUBDIRECTORY(third_party/ssc)
-unset(skip_api)
-unset(skip_tools)
-unset(skip_tests)
 set_target_properties(ssc PROPERTIES FOLDER ThirdParty/ssc)
 IF ( CMAKE_COMPILER_IS_GNUCXX OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang" OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "AppleClang"  ) # g++/Clang
   target_compile_options(splinter PUBLIC -Wno-error -w)
