Revert "Start to modernize Fortran CMake"
This reverts commit 30b8df1f3217407a956afb4017618ab54ff8d072.

--- a/src/AppGPostProcess/CMakeLists.txt
+++ b/src/AppGPostProcess/CMakeLists.txt
@@ -12,28 +12,27 @@ set(SRC AppGPostProcess.f90)
 
 set(STATIC_EXE FALSE)
 
-add_library(AppGPostProcessOptions INTERFACE)
 if(APPLE)
   if(CMAKE_Fortran_COMPILER MATCHES "ifort")
-    target_compile_options(AppGPostProcessOptions INTERFACE -fpp)
-    target_compile_options(AppGPostProcessOptions INTERFACE -static-intel)
+    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -fpp")
+    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static-intel")
   else()
     if(NOT "Ninja" STREQUAL ${CMAKE_GENERATOR})
-      target_compile_options(AppGPostProcessOptions INTERFACE -cpp)
+      set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -cpp")
     endif()
-    target_compile_options(AppGPostProcessOptions INTERFACE -ffree-line-length-200)
+    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -ffree-line-length-200")
   endif()
 elseif(UNIX)
   set(CMAKE_SKIP_RPATH TRUE)
   if(CMAKE_Fortran_COMPILER MATCHES "ifort")
-    target_compile_options(AppGPostProcessOptions INTERFACE -fpp)
-    target_compile_options(AppGPostProcessOptions INTERFACE -static-intel)
+    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -fpp")
+    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static-intel")
   else()
     if(NOT "Ninja" STREQUAL ${CMAKE_GENERATOR})
-      target_compile_options(AppGPostProcessOptions INTERFACE -cpp)
+      set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -cpp")
     endif()
-    target_compile_options(AppGPostProcessOptions INTERFACE -static)
-    target_compile_options(AppGPostProcessOptions INTERFACE -ffree-line-length-200)
+    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static")
+    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -ffree-line-length-200")
     set(STATIC_EXE TRUE)
   endif()
 else() # Windows
@@ -41,20 +40,19 @@ else() # Windows
   if(CMAKE_Fortran_COMPILER MATCHES "ifort")
     # Set release flags to be empty
     set(CMAKE_Fortran_FLAGS_RELEASE "")
-    target_compile_options(AppGPostProcessOptions INTERFACE /libs:static)
-    target_compile_options(AppGPostProcessOptions INTERFACE /fpp)
+    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} /libs:static")
+    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} /fpp")
   else()
-    target_compile_options(AppGPostProcessOptions INTERFACE -static)
+    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static")
     if(NOT "Ninja" STREQUAL ${CMAKE_GENERATOR})
-      target_compile_options(AppGPostProcessOptions INTERFACE -cpp)
+      set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -cpp")
     endif()
-    target_compile_options(AppGPostProcessOptions INTERFACE -ffree-line-length-200)
+    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -ffree-line-length-200")
   endif()
 endif()
 
 set(SKIP_BUILD_RPATH TRUE)
 add_executable(AppGPostProcess ${SRC})
-target_link_libraries(AppGPostProcess PRIVATE AppGPostProcessOptions)
 set_target_properties(AppGPostProcess PROPERTIES FOLDER Auxiliary)
 
 install(TARGETS AppGPostProcess DESTINATION PostProcess)
