--- a/src/Transition/CMakeLists.txt
+++ b/src/Transition/CMakeLists.txt
@@ -112,7 +112,7 @@ else() # Windows
   endif()
 endif()
 
-target_link_libraries(TransitionLib PRIVATE TransitionOptions)
+target_compile_options(TransitionLib PUBLIC TransitionOptions)
 
 list(LENGTH VERSIONS VERSIONS_SIZE)
 
@@ -138,7 +138,7 @@ foreach(i RANGE 1 ${end})
   set(CMAKE_Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${LAST_NAME})
   add_executable("${LAST_NAME}" ${SRC})
   set_target_properties("${LAST_NAME}" PROPERTIES FOLDER Auxiliary)
-  target_link_libraries("${LAST_NAME}" PRIVATE TransitionLib TransitionOptions)
+  target_link_libraries("${LAST_NAME}" TransitionLib)
 
   if("${i}" GREATER "22")
     install(TARGETS "${LAST_NAME}" DESTINATION PreProcess/IDFVersionUpdater)
