--- a/src/ParametricPreprocessor/CMakeLists.txt
+++ b/src/ParametricPreprocessor/CMakeLists.txt
@@ -10,20 +10,18 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/../../Products")
 
 set(SRC ParametricPreprocessor.f90)
 
-add_library(ParametricPreprocessorOptions INTERFACE)
-
 set(STATIC_EXE FALSE)
 
 if(APPLE)
   if(CMAKE_Fortran_COMPILER MATCHES "ifort")
-    target_compile_options(ParametricPreprocessorOptions INTERFACE -static-intel)
+    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static-intel")
   endif()
 elseif(UNIX)
   set(CMAKE_SKIP_RPATH TRUE)
   if(CMAKE_Fortran_COMPILER MATCHES "ifort")
-    target_compile_options(ParametricPreprocessorOptions INTERFACE -static-intel)
+    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static-intel")
   else()
-    target_compile_options(ParametricPreprocessorOptions INTERFACE -static)
+    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static")
     set(STATIC_EXE TRUE)
   endif()
 else()
@@ -31,19 +29,17 @@ else()
   if(CMAKE_Fortran_COMPILER MATCHES "ifort")
     # Set release flags to be empty
     set(CMAKE_Fortran_FLAGS_RELEASE "")
-    target_compile_options(ParametricPreprocessorOptions INTERFACE /libs:static)
+    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} /libs:static")
   else()
-    target_compile_options(ParametricPreprocessorOptions INTERFACE -static)
+    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static")
   endif()
 endif()
 
 set(SKIP_BUILD_RPATH true)
 add_executable(ParametricPreprocessor ${SRC})
-target_link_libraries(ParametricPreprocessor PRIVATE ParametricPreprocessorOptions)
 set_target_properties(ParametricPreprocessor PROPERTIES FOLDER Auxiliary)
 
-set_target_properties(ParametricPreprocessor PROPERTIES COMPILE_FLAGS -ffree-line-length-200)
-
+set_target_properties(ParametricPreprocessor PROPERTIES COMPILE_FLAGS "-ffree-line-length-200 ${SHARED_FLAGS}")
 
 install(TARGETS ParametricPreprocessor DESTINATION PreProcess/ParametricPreprocessor)
 if(NOT ${STATIC_EXE})
