--- a/src/ReadVars/CMakeLists.txt
+++ b/src/ReadVars/CMakeLists.txt
@@ -12,19 +12,16 @@ set(SRC ReadVarsESO.f90)
 
 set(STATIC_EXE FALSE)
 
-add_library(ReadVarsOptions INTERFACE)
-
-
 if(APPLE)
   if(CMAKE_Fortran_COMPILER MATCHES "ifort")
-    target_compile_options(ReadVarsOptions INTERFACE -static-intel)
+    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static-intel")
   endif()
 elseif(UNIX)
   set(CMAKE_SKIP_RPATH TRUE)
   if(CMAKE_Fortran_COMPILER MATCHES "ifort")
-    target_compile_options(ReadVarsOptions INTERFACE -static-intel)
+    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static-intel")
   else()
-    target_compile_options(ReadVarsOptions INTERFACE -static)
+    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static")
     set(STATIC_EXE TRUE)
   endif()
 else()
@@ -32,16 +29,15 @@ else()
   if(CMAKE_Fortran_COMPILER MATCHES "ifort")
     # Set release flags to be empty
     set(CMAKE_Fortran_FLAGS_RELEASE "")
-    target_compile_options(ReadVarsOptions INTERFACE /libs:static)
+    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} /libs:static")
   else()
-    target_compile_options(ReadVarsOptions INTERFACE -static)
+    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static")
   endif()
 endif()
 
 set(SKIP_BUILD_RPATH true)
 add_executable(ReadVarsESO ${SRC})
 set_target_properties(ReadVarsESO PROPERTIES FOLDER Auxiliary)
-target_link_libraries(ReadVarsESO PRIVATE ReadVarsOptions)
 
 install(TARGETS ReadVarsESO DESTINATION PostProcess)
 if(NOT ${STATIC_EXE})
