--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -250,9 +250,24 @@ ENDIF()
 ADD_SUBDIRECTORY(third_party/Windows-CalcEngine)
 set_target_properties(Windows-CalcEngine PROPERTIES FOLDER ThirdParty/Windows-CalcEngine)
 
+mark_as_advanced(FORCE JSONCPP_USE_SECURE_MEMORY)
+mark_as_advanced(FORCE JSONCPP_WITH_CMAKE_PACKAGE)
+mark_as_advanced(FORCE JSONCPP_WITH_EXAMPLE)
+mark_as_advanced(FORCE JSONCPP_WITH_PKGCONFIG_SUPPORT)
+mark_as_advanced(FORCE JSONCPP_WITH_STRICT_ISO)
+mark_as_advanced(FORCE JSONCPP_WITH_TESTS)
+set(JSONCPP_WITH_TESTS OFF CACHE BOOL "Compile and (for jsoncpp_check) run JsonCpp test executables" FORCE)
+mark_as_advanced(FORCE JSONCPP_WITH_WARNING_AS_ERROR)
+mark_as_advanced(FORCE DEBUG_LIBNAME_SUFFIX)
+mark_as_advanced(FORCE JSONCPP_WITH_POST_BUILD_UNITTEST)
+set(JSONCPP_WITH_POST_BUILD_UNITTEST OFF CACHE BOOL "Automatically run unit-tests as a post build step" FORCE)
+mark_as_advanced(FORCE CCACHE_FOUND)
 set(SAM_SKIP_TOOLS ON CACHE BOOL "Skips the sdktool and tcsconsole builds" FORCE)
+mark_as_advanced(FORCE SAM_SKIP_TOOLS)
 set(SAM_SKIP_TESTS ON CACHE BOOL "Skips building tests" FORCE)
+mark_as_advanced(FORCE SAM_SKIP_TESTS)
 set(SAMAPI_EXPORT OFF CACHE BOOL "Export of ssc binaries to the SAM_api directory; for Unix, compile ssc libraries for SAM_api" FORCE)
+mark_as_advanced(FORCE SAMAPI_EXPORT)
 ADD_SUBDIRECTORY(third_party/ssc)
 set_target_properties(ssc PROPERTIES FOLDER ThirdParty/ssc)
 IF ( CMAKE_COMPILER_IS_GNUCXX OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang" OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "AppleClang"  ) # g++/Clang
