--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -188,6 +188,7 @@ INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR}/third_party/Windows-CalcEngine/src/Si
 INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR}/third_party/Windows-CalcEngine/src/SpectralAveraging/include)
 INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR}/third_party/Windows-CalcEngine/src/Tarcog/include)
 INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR}/third_party/Windows-CalcEngine/src/Viewer/include)
+INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR}/third_party/CoolProp-IF97)
 if( OPENGL_FOUND )
     INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR}/third_party/penumbra/include )
 endif()
@@ -237,6 +238,8 @@ ADD_SUBDIRECTORY(third_party/re2)
 set_target_properties(re2 PROPERTIES FOLDER ThirdParty/re2)
 ADD_SUBDIRECTORY(third_party/fmt-6.1.2 )
 set_target_properties(fmt PROPERTIES FOLDER ThirdParty/fmt)
+ADD_SUBDIRECTORY(third_party/CoolProp-IF97 )
+set_target_properties(CoolProp-IF97 PROPERTIES FOLDER ThirdParty/CoolProp-IF97)
 
 ADD_SUBDIRECTORY(scripts/dev/generate_embeddable_epJSON_schema)
 set_target_properties(generate_embeddedable_epJSON_schema PROPERTIES FOLDER "Internal")
