--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -250,6 +250,7 @@ ENDIF()
 ADD_SUBDIRECTORY(third_party/Windows-CalcEngine)
 set_target_properties(Windows-CalcEngine PROPERTIES FOLDER ThirdParty/Windows-CalcEngine)
 
+# SAM Simulation Core (SSC)
 mark_as_advanced(FORCE JSONCPP_USE_SECURE_MEMORY)
 mark_as_advanced(FORCE JSONCPP_WITH_CMAKE_PACKAGE)
 mark_as_advanced(FORCE JSONCPP_WITH_EXAMPLE)
@@ -273,11 +274,11 @@ set_target_properties(ssc PROPERTIES FOLDER ThirdParty/ssc)
 IF ( CMAKE_COMPILER_IS_GNUCXX OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang" OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "AppleClang"  ) # g++/Clang
   target_compile_options(splinter PUBLIC -Wno-error -w)
   target_compile_options(shared PUBLIC -Wno-error -w)
-#  target_compile_options(nlopt PUBLIC -Wno-error -w)
-#  target_compile_options(lpsolve PUBLIC -Wno-error -w)
-#  target_compile_options(solarpilot PUBLIC -Wno-error -w)
-#  target_compile_options(tcs PUBLIC -Wno-error -w)
   target_compile_options(ssc PUBLIC -Wno-error -w)
+ELSEIF( MSVC ) # VisualStudio
+  target_compile_options(splinter PUBLIC /W0)
+  target_compile_options(shared PUBLIC /W0)
+  target_compile_options(ssc PUBLIC /W0)
 ENDIF()
 
 # Btwxt
