add unit test and IDF

--- a/testfiles/CMakeLists.txt
+++ b/testfiles/CMakeLists.txt
@@ -345,6 +345,7 @@ ADD_SIMULATION_TEST(IDF_FILE HybridModel_4Zone_Solve_Infiltration_free_floating.
 ADD_SIMULATION_TEST(IDF_FILE HybridModel_4Zone_Solve_PeopleCount_with_HVAC.idf EPW_FILE USA_IL_Chicago-OHare.Intl.AP.725300_TMY3.epw)
 ADD_SIMULATION_TEST(IDF_FILE IceStorage-Parallel.idf EPW_FILE USA_IL_Chicago-OHare.Intl.AP.725300_TMY3.epw)
 ADD_SIMULATION_TEST(IDF_FILE IceStorage-Series-ChillerDownstream.idf EPW_FILE USA_IL_Chicago-OHare.Intl.AP.725300_TMY3.epw)
+ADD_SIMULATION_TEST(IDF_FILE icerink-2zones.idf EPW_FILE USA_NJ_Belmar-Monmouth.County.AP.724084_TMY3.epw)
 ADD_SIMULATION_TEST(IDF_FILE IceStorage-Series-ChillerUpstream.idf EPW_FILE USA_IL_Chicago-OHare.Intl.AP.725300_TMY3.epw)
 ADD_SIMULATION_TEST(IDF_FILE IndEvapCoolerRTUoffice.idf EPW_FILE USA_AZ_Phoenix-Sky.Harbor.Intl.AP.722780_TMY3.epw)
 ADD_SIMULATION_TEST(IDF_FILE IndirectAbsorptionChiller.idf EPW_FILE USA_FL_Miami.Intl.AP.722020_TMY3.epw)
