--- a/tst/EnergyPlus/unit/CMakeLists.txt
+++ b/tst/EnergyPlus/unit/CMakeLists.txt
@@ -142,6 +142,7 @@ set( test_src
   ICSCollector.unit.cc
   IdfParser.unit.cc
   InputProcessor.unit.cc
+  IndoorIceRink.unit.cc
   IntegratedHeatPump.unit.cc
   InternalHeatGains.unit.cc
   KusudaAchenbachGroundTemperatureModel.unit.cc
